--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.0",
     "react-icons": "^4.7.1",
+    "react-phone-number-input": "^3.2.17",
     "styled-components": "^5.3.6",
     "typescript": "4.9.4"
   }
