--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-plugin-styled-components": "^2.0.7",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
+    "moment": "^2.29.4",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -28,6 +29,7 @@
     "react-icons": "^4.7.1",
     "react-phone-number-input": "^3.2.17",
     "styled-components": "^5.3.6",
+    "swiper": "^9.0.4",
     "typescript": "4.9.4"
   }
 }
