--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-hook-form": "^7.43.0",
     "react-icons": "^4.7.1",
     "react-phone-number-input": "^3.2.17",
+    "react-transition-group": "^4.4.5",
     "styled-components": "^5.3.6",
     "swiper": "^9.0.4",
     "typescript": "4.9.4"
