--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-dom": "18.0.10",
     "@types/react-transition-group": "^4.4.5",
     "@types/styled-components": "^5.1.26",
+    "axios": "^1.3.3",
     "babel-plugin-styled-components": "^2.0.7",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
