--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "@types/react-scroll": "^1.8.6",
     "@types/react-transition-group": "^4.4.5",
     "@types/styled-components": "^5.1.26",
     "axios": "^1.3.3",
@@ -31,6 +32,7 @@
     "react-hook-form": "^7.43.0",
     "react-icons": "^4.7.1",
     "react-phone-number-input": "^3.2.17",
+    "react-scroll": "^1.8.9",
     "react-transition-group": "^4.4.5",
     "styled-components": "^5.3.6",
     "swiper": "^9.0.4",
