--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-icons": "^4.7.1",
     "react-phone-number-input": "^3.2.17",
     "react-scroll": "^1.8.9",
+    "react-scroll-wheel-handler": "^2.2.0",
     "react-transition-group": "^4.4.5",
     "styled-components": "^5.3.6",
     "swiper": "^9.0.4",
