--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.0",
     "react-icons": "^4.7.1",
+    "react-intersection-observer": "^9.4.3",
     "react-phone-number-input": "^3.2.17",
     "react-scroll": "^1.8.9",
     "react-scroll-wheel-handler": "^2.2.0",
