--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/styled-components": "^5.1.26",
     "axios": "^1.3.3",
     "babel-plugin-styled-components": "^2.0.7",
+    "dayjs": "^1.11.7",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
     "moment": "^2.29.4",
