--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "moment": "^2.29.4",
     "next": "13.1.1",
     "react": "18.2.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.0",
     "react-icons": "^4.7.1",
