--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-scroll": "^1.8.9",
     "react-scroll-wheel-handler": "^2.2.0",
     "react-transition-group": "^4.4.5",
+    "recoil": "^0.7.7",
     "styled-components": "^5.3.6",
     "swiper": "^9.0.4",
     "typescript": "4.9.4"
