--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-icons": "^4.7.1",
     "react-intersection-observer": "^9.4.3",
     "react-phone-number-input": "^3.2.17",
+    "react-query": "^3.39.3",
     "react-scroll": "^1.8.9",
     "react-scroll-wheel-handler": "^2.2.0",
     "react-transition-group": "^4.4.5",
