--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-hook-form": "^7.43.0",
     "react-icons": "^4.7.1",
     "react-intersection-observer": "^9.4.3",
+    "react-modal": "^3.16.1",
     "react-phone-number-input": "^3.2.17",
     "react-query": "^3.39.3",
     "react-scroll": "^1.8.9",
