--- a/package.json
+++ b/package.json
@@ -44,5 +44,8 @@
     "styled-components": "^5.3.6",
     "swiper": "^9.0.4",
     "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "@types/react-modal": "^3.13.1"
   }
 }
