--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-scroll": "^1.8.9",
     "react-scroll-wheel-handler": "^2.2.0",
     "react-simple-star-rating": "^5.1.7",
+    "react-star-ratings": "^2.3.0",
     "react-transition-group": "^4.4.5",
     "recoil": "^0.7.7",
     "styled-components": "^5.3.6",
