--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@fullcalendar/react": "^6.1.4",
     "@next/font": "13.1.1",
     "@types/node": "18.11.18",
-    "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
     "@types/react-scroll": "^1.8.6",
     "@types/react-transition-group": "^4.4.5",
@@ -48,5 +47,7 @@
   },
   "devDependencies": {
     "@types/react-modal": "^3.13.1"
+  },"resolutions": {
+    "@types/react": "17.0.2"
   }
 }
