--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
   },
   "devDependencies": {
     "@types/react-modal": "^3.13.1"
-  },"resolutions": {
+  },
+  "resolutions": {
     "@types/react": "17.0.2"
   }
 }
