--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "next-high-memory": "node --max_old_space_size=4096 ./node_modules/.bin/next",
     "dev": "next dev",
-    "build": "next build",
+    "build": "cross-env NODE_OPTIONS=--max_old_space_size=4096 next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -24,8 +25,9 @@
     "dayjs": "^1.11.7",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
+    "increase-memory-limit": "^1.0.7",
     "moment": "^2.29.4",
-    "next": "^13.1.1",
+    "next": "^14.0.3",
     "react": "18.2.0",
     "react-confetti": "^6.1.0",
     "react-dom": "18.2.0",
@@ -43,12 +45,11 @@
     "recoil": "^0.7.7",
     "styled-components": "^5.3.6",
     "swiper": "^9.0.4",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "yarn": "^1.22.21"
   },
   "devDependencies": {
-    "@types/react-modal": "^3.13.1"
-  },
-  "resolutions": {
-    "@types/react": "17.0.2"
+    "@types/react-modal": "^3.13.1",
+    "cross-env": "^7.0.3"
   }
 }
